# better-auth-rs

./: .gardenignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: health.yml
examples/: server.rs
src/: error.rs  lib.rs
src/api/: client.rs  server.rs
src/interfaces/: crypto.rs  encoding.rs  io.rs  mod.rs  paths.rs  storage.rs
src/messages/: access.rs  account.rs  device.rs  message.rs  mod.rs  recovery.rs  request.rs  response.rs  session.rs
src/tests/implementation/: mod.rs
src/tests/implementation/crypto/: hasher.rs  mod.rs  noncer.rs  secp256r1.rs
src/tests/implementation/encoding/: base64.rs  identity.rs  mod.rs  timestamper.rs  token_encoder.rs
src/tests/implementation/storage/: client.rs  common.rs  mod.rs  server.rs
tests/: api_test.rs  integration_test.rs  token_test.rs
tests/common/: implementation.rs
tests/implementation/: mod.rs
tests/implementation/crypto/: hasher.rs  mod.rs  noncer.rs  secp256r1.rs
tests/implementation/encoding/: identity.rs  mod.rs  timestamper.rs  token_encoder.rs
tests/implementation/storage/: client.rs  common.rs  mod.rs  server.rs
