[package]
name = "better-auth"
version = "0.1.0"
edition = "2024"
authors = ["Jason Colburne"]
license = "MIT"
description = "A lightweight authentication library using secp256r1 cryptography and token-based authentication"
keywords = ["authentication", "security", "cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"], optional = true }
blake3 = { version = "1.5", optional = true }
p256 = { version = "0.13", features = ["ecdsa", "std"], optional = true }
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
blake3 = "1.5"
p256 = { version = "0.13", features = ["ecdsa", "std"] }
base64 = "0.22"
chrono = "0.4"
flate2 = "1.0"
rand = "0.8"
sha2 = "0.10"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = "0.11"

[features]
default = []
test-implementations = ["tokio", "blake3", "p256", "base64", "chrono", "flate2", "rand"]

[lib]
name = "better_auth"
path = "src/lib.rs"

[[example]]
name = "server"
path = "examples/server.rs"
